# todos-service

./: .gitignore  Makefile  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 3b93f40290df_init.py  9891d28693f3_add_notes_api_and_linked_to_todos_api.py
src/: admin_view_database.py  app.py  config.py  database.py  exceptions.py  logging_config.py  main.py  models.py
src/notes/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
src/todos/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
