[project]
name = "todos-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.135.1",
    "hypercorn>=0.18.0",
    "pydantic>=2.12.5",
    "sqlmodel>=0.0.37",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "ty>=0.0.24",
]
